# Pixly

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-ios.yml  release.yml
src/: App.tsx  index.css  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  splash.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnimationView.tsx  Canvas.tsx  NewProjectDialog.tsx  PreviewCanvas.tsx  TabBar.tsx  Timeline.tsx  VantaBackground.tsx  WelcomeScreen.tsx
src/components/MenuBar/: Menu.tsx  MenuItem.tsx  Separator.tsx  index.tsx  types.ts
src/components/animation/: AnimationView.tsx
src/components/canvas/: Canvas.tsx  CanvasWorkspace.tsx  PreviewCanvas.tsx
src/components/timeline/: Timeline.tsx
src/components/ui/: AppErrorBoundary.tsx  BottomBar.tsx  BrushPopup.tsx  CutPopup.tsx  ExportFrameDialog.tsx  LeftSidebar.tsx  LoadingScreen.tsx  MotionAssistDialog.tsx  NewProjectDialog.tsx  OnboardingGuide.tsx  RightSidebar.tsx  SaveConfirmDialog.tsx  SplashScreen.tsx  TabBar.tsx  (+2 more)
src/constants/: appInfo.ts
src/hooks/: useAppUpdater.ts  useCanvasApp.ts  usePlayback.ts  useSidebarResize.ts  useTabManager.ts  useUndoRedo.ts
src/lib/: autoSave.ts  colorHelpers.ts  drawing.ts  frameHelpers.ts  gifExport.ts  imageExport.ts  imageImport.ts  layerSplit.ts  pixelFont.ts  pixelGridRender.ts  projectFile.ts  tabHelpers.ts  transformHelpers.ts
src/store/: index.ts
src/utils/: autoSave.ts  drawing.ts  gifExport.ts
(+26 files in other folders)
